[package]
name = "asahi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
sunrise = "1.0.1"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
zbus = "4.1.2"
